# cppwg

./: .cproject  .flake8  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: build-and-test.yml
cppwg/: __init__.py  __main__.py  generators.py
cppwg/input/: __init__.py  base_info.py  class_info.py  class_info_generator.py  cpp_type_info.py  free_function_info.py  info_helper.py  method_info.py  module_info.py  package_info.py  variable_info.py
cppwg/parsers/: __init__.py  package_info.py  package_info_parser.py  source_parser.py
cppwg/templates/: custom.py  pybind11_default.py
cppwg/utils/: __init__.py  constants.py  utils.py
cppwg/writers/: __init__.py  base_writer.py  class_writer.py  constructor_writer.py  free_function_writer.py  header_collection_writer.py  method_writer.py  module_writer.py
doc/: Makefile  conf.py  index.rst
examples/shapes/: CMakeLists.txt
examples/shapes/src/geometry/: Point.cpp  Point.hpp
examples/shapes/src/primitives/: Cuboid.cpp  Cuboid.hpp  Rectangle.cpp  Shape.cpp
examples/shapes/src/python/pyshapes/geometry/: __init__.py
examples/shapes/src/python/pyshapes/math_funcs/: __init__.py
examples/shapes/src/python/pyshapes/primitives/: __init__.py
examples/shapes/src/python/test/: test_classes.py  test_functions.py
examples/shapes/wrapper/: generate.py  wrapper_header_collection.hpp
examples/shapes/wrapper/geometry/: Point2.cppwg.cpp  Point2.cppwg.hpp  Point3.cppwg.cpp  Point3.cppwg.hpp  geometry.main.cpp
examples/shapes/wrapper/math_funcs/: math_funcs.main.cpp
examples/shapes/wrapper/primitives/: Cuboid.cppwg.cpp  Cuboid.cppwg.hpp  Rectangle.cppwg.hpp  Shape2.cppwg.cpp  Shape2.cppwg.hpp  Shape3.cppwg.cpp  Shape3.cppwg.hpp  primitives.main.cpp
examples/shapes/wrapper/pybind11/tests/: requirements.txt
shapes/: CMakeLists.txt
shapes/src/geometry/: Point.cpp  Point.hpp
shapes/src/math_funcs/: SimpleMathFunctions.hpp
shapes/src/primitives/: Rectangle.hpp  Shape.hpp  Square.cpp
shapes/src/python/pyshapes/functions/: __init__.py
shapes/src/python/pyshapes/geometry/: __init__.py
shapes/src/python/pyshapes/math_funcs/: __init__.py
shapes/src/python/pyshapes/primitives/: __init__.py
shapes/src/python/test/: test_classes.py  test_functions.py
shapes/wrapper/: generate.py  package_info.yaml  wrapper_header_collection.hpp
shapes/wrapper/geometry/: Dog.cppwg.cpp  Pet.cppwg.cpp  Pet.cppwg.hpp  Point3.cppwg.hpp
shapes/wrapper/math_funcs/: Dog.cppwg.cpp  Dog.cppwg.hpp  Pet.cppwg.cpp  functions.main.cpp
shapes/wrapper/primitives/: Rectangle.cppwg.cpp  Rectangle.cppwg.hpp  Shape2.cppwg.cpp  Shape3.cppwg.cpp
test/: CMakeLists.txt
test/example_project/: simple_class.hpp  simple_function.hpp  units.hpp
test/example_project/test/: test_classes.py  test_functions.py
test/wrap_simple_function/: generate.py  package_info.yaml  wrapper_header_collection.hpp
test/wrap_simple_function/functions/: functions.main.cpp
tests/: test_shapes.py
