[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "cppwg"
description = "An automatic Python wrapper generator for C++"
authors = [
  { name = "Chaste Developers", email = "chaste-users@maillist.ox.ac.uk" },
  { name = "James Grogan", email = "grogan@maths.ox.ac.uk" },
  { name = "Kwabena Amponsah", email = "kwabenantim@gmail.com" },
]
license = { file = "LICENSE" }
keywords = ["C++", "Python", "Pybind11"]
readme = "README.md"
version = "0.0.1-alpha"

classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Software Development",
]

dependencies = ["pyyaml >=6.0", "pygccxml >=2.2", "castxml >=0.4"]

requires-python = ">=3.8"

[project.optional-dependencies]
dev = ["flake8", "flake8-bugbear", "isort"]
docs = ["sphinx", "sphinx-rtd-theme", "numpydoc"]

[project.scripts]
cppwg = "cppwg.__main__:main"

[project.urls]
Repository = "https://github.com/Chaste/cppwg/"
